# diff-match-patch-wasm

./: Cargo.toml  LICENSE_MIT  README.md
.github/workflows/: main.yml
src/: lib.rs
