[package]
name = "diff-match-patch-wasm"
version = "1.0.0"
authors = ["ParticleG <particle_g@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diff-match-patch-rs = "0.3.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
